unpackaged/main/default/objects/Campaign_Account__c/Campaign_Account__c.object-meta.xml
<CustomObject>
    <description>No longer required as it&#39;s replaced with new Standard SF function in Campaign Members.
Add Accounts without contact info to a Campaign</description>
    <label>Campaign Account</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Campaign Account No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>