unpackaged/main/default/objects/Campaign_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Campaign Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Accounts</relationshipLabel>
    <relationshipName>Campaign_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>