unpackaged/main/default/objects/Campaign_Account__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Account__r.Owner.FirstName + &#39; &#39; +  Account__r.Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>