unpackaged/main/default/objects/Campaign_Account__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <formula>Account__r.AnnualRevenue</formula>
    <label>Annual Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>