unpackaged/main/default/objects/Campaign_Account__c/fields/Number_of_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Opportunities__c</fullName>
    <formula>Account__r.Number_of_Open_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Open Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>