unpackaged/main/default/objects/Campaign_Account__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task Created</fullName>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>