unpackaged/main/default/objects/Campaign_Account__c/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <formula>TEXT(Account__r.Vertical_Market__c)</formula>
    <label>Vertical Market</label>
    <type>Text</type>
</CustomField>